# Git_IDEA_CALO_FIBER

./: setenv-cc7-gcc8.sh
DRC4pifibers/DRC4pigeometry/Dream/B4/: CMakeLists.txt
DRC4pifibers/DRC4pigeometry/Dream/B4/B4a/: CMakeLists.txt  exampleB4a.cc  run_ref.mac  run_syn.mac
DRC4pifibers/DRC4pigeometry/Dream/B4/B4a/src/: B4DetectorConstruction.cc
